# f2f2019

c/: .project  CMakeLists.txt  config.h.in  readme.adoc
c/include/: grgr_f2f2019_n_NativeBridge.h
c/src/: cversion.c  nbridge.c  processes.c  threads.c
docker/: readme.adoc
docker/threads/: Dockerfile
go/: go.mod  readme.adoc
go/cmd/f2f2019/: f2f2019.go
go/cmd/version/: version.go
go/pkg/f2f/: root.go
java/: pom.xml  readme.adoc
java/src/main/java/grgr/f2f2019/apps/: Mem.java  PthreadsAll.java
java/src/main/java/grgr/f2f2019/n/: NativeBridge.java
java/src/test/java/grgr/f2f2019/: NativeTest.java  VersionTest.java
java/src/test/resources/: log4j2-test.properties
osgi/: pom.xml  readme.adoc
osgi/src/main/java/com/rh/example/: NativeBridgeCallback.java
osgi/src/main/java/grgr/f2f2019/: Activator.java
osgi/src/main/java/grgr/f2f2019/apps/: Mem.java  PthreadsAll.java
osgi/src/main/java/grgr/f2f2019/n/: NativeBridge.java
osgi/src/test/java/grgr/f2f2019/: NativeTest.java
